--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
-langdetect==1.0.8
-six==1.15.0
-whois==0.9.7
+beautifulsoup4==4.9.3
 bs4==0.0.1
-pandas==1.0.5
-requests==2.22.0
+certifi==2020.11.8
+chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
+Flask-Cors==3.0.9
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+langdetect==1.0.8
+lxml==4.6.2
+MarkupSafe==1.1.1
+numpy==1.19.4
+pandas==1.1.4
+python-dateutil==2.8.1
+pytz==2020.4
+requests==2.25.0
+six==1.15.0
+soupsieve==2.0.1
+urllib3==1.26.2
+Werkzeug==1.0.1
+whois==0.9.7
