--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ six==1.15.0
 soupsieve==2.0.1
 urllib3==1.26.2
 Werkzeug==1.0.1
-whois==0.9.7
+pythonwhois-alt
 selenium==3.141.0
 grequests==0.6.0
 python-Levenshtein
