--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,41 @@
+astroid==2.4.2
 beautifulsoup4==4.9.3
 bs4==0.0.1
+builtwith==1.3.4
 certifi==2020.11.8
 chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 Flask-Cors==3.0.9
+gevent==20.9.0
+greenlet==0.4.17
+grequests==0.6.0
 idna==2.10
+install==1.3.4
+isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 langdetect==1.0.8
+lazy-object-proxy==1.4.3
 lxml==4.6.2
 MarkupSafe==1.1.1
+mccabe==0.6.1
 numpy==1.19.4
 pandas==1.1.4
+pylint==2.6.0
 python-dateutil==2.8.1
+python-Levenshtein==0.12.0
+pythonwhois==2.4.3
+pythonwhois-alt==2.4.4
 pytz==2020.4
 requests==2.25.0
+selenium==3.141.0
 six==1.15.0
 soupsieve==2.0.1
+toml==0.10.2
 urllib3==1.26.2
 Werkzeug==1.0.1
-pythonwhois-alt
-selenium==3.141.0
-grequests==0.6.0
-python-Levenshtein
+whois==0.9.7
+wrapt==1.12.1
+zope.event==4.5.0
+zope.interface==5.2.0
